Update language files

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/de_DE.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/de_DE.lang
@@ -28,8 +28,8 @@ tile.crossedDecoration.infestedBush.name=Infizierter Busch
 tile.crossedDecoration.infestedGrass.name=Infiziertes Gras
 tile.crossedDecoration.lilyfire.name=Feuerseerose
 tile.endermanHead.name=Endermankopf
-tile.dungeonPuzzle.unlit.name=Verliespuzzle (Unangezündet)
-tile.dungeonPuzzle.lit.name=Verliespuzzle (Angezündet)
+tile.dungeonPuzzle.unlit.name=Verliespuzzle (unangezündet)
+tile.dungeonPuzzle.lit.name=Verliespuzzle (angezündet)
 tile.dungeonPuzzle.wall.name=Verliespuzzle (Wand)
 tile.dungeonPuzzle.wallRock.name=Verliespuzzle (Wandstein)
 tile.dungeonPuzzle.wallLit.name=Verliespuzzle (Angezündete Wand)
@@ -66,7 +66,7 @@ entity.forestGhost.name=Geist
 entity.fireGolem.name=Feuergolem
 entity.scorchingLens.name=Brandlinse
 namegenerator.middle=,
-key.openCompendium.conflict=Ender Compendium key conflicts with $, please fix the issue in Controls menu.
+key.openCompendium.conflict=Die Ender Kompendium Taste hat einen Konflikt mit $, bitte belegen sie die Taste mit einer anderen Taste im Menu
 challenge.hard0Deaths=Hardcore-Spieler
 challenge.hard0Deaths.desc=Töte den Drachen, ohne zu sterben
 challenge.bedExplode=Schlafloser
@@ -190,45 +190,46 @@ item.energyWand.name=Energy Wand
 item.auricion.name=Auricion
 item.rune.any.name=Rune (beliebig)
 entity.endermage.name=Ender Magier
-tile.baconStone.name=Bacon Stone
-tile.essenceAltar.dragon.bacon.name=Bacon Essence Altar
-tile.transportBeacon.name=Transport Beacon
-tile.transportBeacon.bacon.name=Transport Bacon
-tile.experienceTable.name=Experience Table
+tile.baconStone.name=Leuchtfeuer Stein
+tile.essenceAltar.dragon.bacon.name=Leutfeueressenz-Altar
+tile.transportBeacon.name=Transport Leuchtfeuer
+tile.transportBeacon.bacon.name=Transport Leuchtfeuer
+tile.experienceTable.name=Erfahrungs Tisch
 tile.accumulationTable.name=Accumulation Table
-tile.extractionTable.name=Extraction Table
-tile.endPowderOre.bacon.name=Bacon Powder Ore
-tile.endiumOre.bacon.name=Baconium Ore
-tile.endiumBlock.bacon.name=Baconium Block
-tile.endFlower.bacon.name=Death Bacon
+tile.extractionTable.name=Extraktions Tisch
+tile.endPowderOre.bacon.name=Leuchtfeuer Pulvererz
+tile.endiumOre.bacon.name=Baconium Erz
+tile.endiumBlock.bacon.name=Leuchtfeuer Block
+tile.endFlower.bacon.name=Todes Leuchtfeuer
 tile.endermanHead.bacon.name=Baconman Head
-tile.dungeonPuzzle.rock.name=Dungeon Puzzle (Rock)
-tile.dungeonPuzzle.ceiling.name=Dungeon Puzzle (Ceiling)
-tile.dungeonPuzzle.disabled.name=Dungeon Puzzle (Disabled)
-tile.dungeonPuzzle.trigger.unlit.name=Dungeon Puzzle (Triggerable - Unlit)
-tile.dungeonPuzzle.trigger.lit.name=Dungeon Puzzle (Triggerable - Lit)
-tile.dungeonPuzzle.chained.unlit.name=Dungeon Puzzle (Non-triggerable - Unlit)
-tile.dungeonPuzzle.chained.lit.name=Dungeon Puzzle (Non-triggerable - Lit)
-tile.dungeonPuzzle.distr.spread.unlit.name=Dungeon Puzzle (Distributor - Spread - Unlit)
-tile.dungeonPuzzle.distr.spread.lit.name=Dungeon Puzzle (Distributor - Spread - Lit)
-tile.dungeonPuzzle.distr.square.unlit.name=Dungeon Puzzle (Distributor - Square - Unlit)
-tile.dungeonPuzzle.distr.square.lit.name=Dungeon Puzzle (Distributor - Square - Lit)
-item.essence.dragon.bacon.name=Bacon Essence
-item.lorePage.bacon.name=Adventurer's Bacon
-item.altarNexus.bacon.name=Bacon Nexus
-item.endPowder.bacon.name=Bacon Powder
-item.endiumIngot.bacon.name=Baconium Ingot
-item.potionOfPurity.name=Potion of Purity
-item.potionOfPurity.splash.name=Splash Potion of Purity
-item.blankGem.name=Blank Gem
-item.templeCaller.bacon.name=Bacon Caller
-item.drySplinter.bacon.name=Dry Bacon
-item.ectoplasm.name=Ectoplasm
-item.spectralTear.name=Spectral Tear
-item.spectralTear.bacon.name=Spectral Bacon
-item.livingMatter.name=Living Matter
-item.livingMatter.bacon.name=Living Bacon
-item.curseAmulet.name=Curse Amulet
+tile.dungeonPuzzle.rock.name=Verliespuzzle (Fels)
+tile.dungeonPuzzle.ceiling.name=Verliespuzzle (Decke)
+tile.dungeonPuzzle.disabled.name=Verliespuzzle (abgeschaltet)
+tile.dungeonPuzzle.trigger.unlit.name=Verliespuzzle (Auslöser unbeleuchtet)
+tile.dungeonPuzzle.trigger.lit.name=Verliespuzzle (Auslöser beleuchtet)
+tile.dungeonPuzzle.chained.unlit.name=Verliespuzzle (Nicht Auslösbar unbeleuchtet)
+tile.dungeonPuzzle.chained.lit.name=Verliespuzzle (Nicht Auslösbar beleuchtet)
+tile.dungeonPuzzle.distr.spread.unlit.name=Verliespuzzle (Verteiler unbeleuchtet)
+tile.dungeonPuzzle.distr.spread.lit.name=Verliespuzzle (Verteiler beleuchtet)
+tile.dungeonPuzzle.distr.square.unlit.name=Verliespuzzle (Verteiler quadratisch unbeleuchtet)
+tile.dungeonPuzzle.distr.square.lit.name=Verliespuzzle (Verteiler quadratisch beleuchtet)
+item.essence.dragon.bacon.name=Leutfeuer Essenz
+item.lorePage.bacon.name=Abenteuer Leuchtfeuer
+item.altarNexus.bacon.name=Leuchtfeuer Nexus
+item.endPowder.bacon.name=Leuchtfeuer Pulver
+item.endiumIngot.bacon.name=Baconium Barren
+item.potionOfPurity.name=Trank der Reinheit
+item.potionOfPurity.splash.name=Wurftrank der Reinheit
+item.blankGem.name=Rohling
+item.templeCaller.bacon.name=Leuchtfeuer Rufer
+item.drySplinter.bacon.name=Ausgetrocknetes Leuchtfeuer
+item.ectoplasm.name=Ektoplasma
+item.spectralTear.name=
+Spektrale Tränen
+item.spectralTear.bacon.name=Spektrales Leuchtfeuer
+item.livingMatter.name=Lebens Materie
+item.livingMatter.bacon.name=Leuchtfeuer des Lebens
+item.curseAmulet.name=Verfluchtes Amulett
 item.knowledgeNote.bacon.name=Bacon of Knowledge
 item.scorchingPickaxe.bacon.name=Scorching Bacon
 item.infernium.name=Infernium
@@ -260,23 +261,28 @@ container.experienceTable=Experience Table
 container.accumulationTable=Accumulation Table
 container.extractionTable=Extraction Table
 container.endPowderEnhancements.bacon=Bacon Powder Enhancements
-container.transportBeacon=Transport Beacon
-container.transportBeacon.bacon=Transport Bacon
-container.transportBeacon.error.dimension=Incorrect dimension
-container.transportBeacon.error.tamper=Tampering detected
-container.transportBeacon.error.nodestination=No destination selected
-container.transportBeacon.error.noenergy=Out of Energy
-container.button.travel=Travel
-key.openCompendium.bacon=Bacon Compendium
+container.transportBeacon=
+Transport Leuchtfeuer
+container.transportBeacon.bacon=
+Transport Leuchtfeuer
+container.transportBeacon.error.dimension=
+Falsche Dimension
+container.transportBeacon.error.tamper=
+Manipulationen erkannt
+container.transportBeacon.error.nodestination=
+Kein Ziel ausgewählt
+container.transportBeacon.error.noenergy=Keine Energie
+container.button.travel=Resisen
+key.openCompendium.bacon=Leuchtfeuer Kompendium
 item.corporealMirageOrb.name=Corporeal Mirage Orb
-tile.soulCharm.name=Soul Charm
-tile.emptySoulCharm.name=Soul Charm Receptacle
+tile.soulCharm.name=Seelenzauber
+tile.emptySoulCharm.name=Seelenzauber Behälter
 baconizer.bacon=bacon
-tile.crossedDecoration.flameweed.name=Flameweed
-tile.crossedDecoration.shadowOrchid.name=Shadow Orchid
-achievement.viewAchievements=View Achievements
-achievement.viewChallenges=View Challenges
-achievement.enderCompendium=The more you know
+tile.crossedDecoration.flameweed.name=Feuer Kraut
+tile.crossedDecoration.shadowOrchid.name=Schatten Orchidee
+achievement.viewAchievements=Erfolge anzeigen
+achievement.viewChallenges=Herausforderungen anzeigen
+achievement.enderCompendium=Wissen ist Macht
 achievement.enderCompendium.desc=Press '%1$s' to open Ender Compendium
 achievement.enderCompendium.desc.bacon=Press '%1$s' to open Bacon Compendium
 achievement.dragonEssence=Learning the powers
@@ -317,28 +323,31 @@ achievement.fieryEssence=Speeding up the heat
 achievement.fieryEssence.desc=Gather some Fiery Essence
 achievement.scorchingPickaxe=The ultimate block melter
 achievement.scorchingPickaxe.desc=Craft a Scorching Pickaxe using Infernium
-item.transferenceGem.info.linked=Linked
-item.templeCaller.info.disabled=The server has disabled Temple Caller.
-item.templeCaller.info.energy=The Temple Caller does not have enough energy.
-item.templeCaller.info.conditions=This is not the time to use that!
+item.transferenceGem.info.linked=Verknüpft
+item.templeCaller.info.disabled=Auf diesem Server sind Tempelrufer nicht aktiviert.
+item.templeCaller.info.energy=Der Tempelrufer hat nicht genug ernergie.
+item.templeCaller.info.conditions=Es nicht an der Zeit dies zu benutzen.
 item.energyWand.info.holding=Holding cluster with $ Energy
 item.charmPouch.info.active=Active
 item.charmPouch.info.inactive=Inactive
-enhancements.clickSelect=Click to select
-enhancements.clickEnhance=Click to enhance
-enhancements.alreadyEnhanced=Already enhanced
+enhancements.clickSelect=Klicken um auszuwählen
+enhancements.clickEnhance=Klicken um zu verbessern
+enhancements.alreadyEnhanced=
+Bereits verbessert
 compendium.discoveredObject=Unlocked new Knowledge Object
-compendium.cannotBuy=Cannot buy this object
-compendium.nonBuyable=The fragment has to be purchased elsewhere
-compendium.unfulfilledRequirements=Another fragment must be bought first
-compendium.viewObject=Click to view
-compendium.dataError=Error opening Ender Compendium, server did not provide required data. Relog, wait a few seconds, pray to your favourite deity and try again!
-compendium.smoothText.title=Smooth text rendering
+compendium.cannotBuy=Dieses Objekt kann nicht gekauft werden.
+compendium.nonBuyable=Das Fragment muss an anderer Stelle erworben werden.
+compendium.unfulfilledRequirements=
+Ein weiteres Fragment muss zuerst gekauft werde.
+compendium.viewObject=Klicken Sie hier um es zu sehen
+compendium.dataError=Fehler beim Öffnen des Ender Kompendium, dem Server fehlen die erforderlichen Daten. Loggen sie sich wieder ein und  warten Sie einige Sekunden ab, beten sie zu ihrer Lieblingsgottheit und versuche es erneut!
+compendium.smoothText.title=
+Glattes Text-Rendering
 compendium.smoothText.line1=Enable if you experience bad
-compendium.smoothText.line2=text scaling (experimental)
-compendium.smoothText.mode=Mode
-compendium.smoothText.disabled=Off
-tile.sacredStone.name=Sacred Stone
+compendium.smoothText.line2=Textgröße (Experimentell)
+compendium.smoothText.mode=Modus
+compendium.smoothText.disabled=Aus
+tile.sacredStone.name=Heiliger Stein
 item.sacredWand.name=Sacred Wand
 item.sacredWand.type.basic=Basic Wand Core
 item.sacredWand.type.advanced=Advanced Wand Core
