--- a/src/main/resources/assets/hardcoreenderexpansion/lang/es_ES.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/es_ES.lang
@@ -70,14 +70,14 @@ key.openCompendium.conflict=Ender Compendium key conflicts with $, please fix th
 challenge.hard0Deaths=Jugador experto
 challenge.hard0Deaths.desc=Mata al dragón sin morir
 challenge.bedExplode=Imsonmio
-challenge.bedExplode.desc=Inflige la cantidad final de daño usando las explosiones de las camas
+challenge.bedExplode.desc=Inflige la cantidad final de daño usando explosiones de camas
 challenge.noEnderman=Amor por los endermans
 challenge.noEnderman.desc=Na mates a ningún enderman durante la batalla
 achievement.newAdventures.desc=¡Bienvenido a Hardcore Ender Expansion!
 achievement.newAdventures=¡Hora de nuevas aventuras!
 challenge.title=Reto:
-challenge.difficulty.hard=Dificultad extrema
-challenge.difficulty.mediumorhard=Dificultad normal / extrema
+challenge.difficulty.hard=Dificultad dificil
+challenge.difficulty.mediumorhard=Dificultad normal / dificil
 tile.decompositionTable.name=Mesa de la descomposición
 tile.energyExtractionTable.name=Mesa de extracción de Energía
 tile.ravagedBrick.name=Ladrillos devastados
@@ -89,10 +89,10 @@ tile.sphalerite.name=Blenda
 tile.sphalerite.stardust.name=Blenda con Polvo de Estrellas
 item.spatialDashGem.name=Gema de la carrera espacial
 item.biomeCompass.name=Brújula de las Islas
-achievement.biomeEnchantedIsland=The Enchanted Island
-achievement.biomeEnchantedIsland.desc=Visit one of the variations of Enchanted Island
+achievement.biomeEnchantedIsland=La isla encantada
+achievement.biomeEnchantedIsland.desc=Visita una de las variaciones de las islas encantadas
 achievement.transferenceGem=Teleportation at last
-achievement.transferenceGem.desc=Craft a Transference Gem
+achievement.transferenceGem.desc=Craftea una gema de transferencia
 achievement.energyWand=In control of Energy
 achievement.energyWand.desc=Acquire an Energy Wand to manipulate with Energy Clusters
 container.endPowderEnhancements=Mejoras del Polvo de El Fin
@@ -137,7 +137,7 @@ item.charm.lastresort.tooltip=Te teletransporta a $0 bloques de distancia del ul
 item.charm.lastresort.name=Encantamiento: Ultimo aliento
 item.charm.magicdefense.tooltip=-$0 de daño mágico recibido
 item.charm.magicdefense.name=Encantamiento: Defensa Mágica
-entity.louse.name=Sabandija
+entity.louse.name=Piojo
 container.charmPouch=Bolsa de encantamientos
 container.runeCrafting=Crear runas
 item.charm.blockingrepulsion.tooltip=-$0 de daño recibido y $1x del empuje repelido
@@ -191,18 +191,18 @@ item.auricion.name=Auricion
 item.rune.any.name=Runa (Nada)
 entity.endermage.name=Mago del Fin
 tile.baconStone.name=Bacon Stone
-tile.essenceAltar.dragon.bacon.name=Bacon Essence Altar
-tile.transportBeacon.name=Transport Beacon
-tile.transportBeacon.bacon.name=Transport Bacon
-tile.experienceTable.name=Experience Table
-tile.accumulationTable.name=Accumulation Table
-tile.extractionTable.name=Extraction Table
-tile.endPowderOre.bacon.name=Bacon Powder Ore
-tile.endiumOre.bacon.name=Baconium Ore
-tile.endiumBlock.bacon.name=Baconium Block
-tile.endFlower.bacon.name=Death Bacon
-tile.endermanHead.bacon.name=Baconman Head
-tile.dungeonPuzzle.rock.name=Dungeon Puzzle (Rock)
+tile.essenceAltar.dragon.bacon.name=Altar de escencia de Tocino
+tile.transportBeacon.name=Transporte de beicon
+tile.transportBeacon.bacon.name=Transporte de beicon
+tile.experienceTable.name=Mesa de experiencia
+tile.accumulationTable.name=Mesa de aacumulación
+tile.extractionTable.name=Mesa de extracción
+tile.endPowderOre.bacon.name=Mena de polvo de beicon
+tile.endiumOre.bacon.name=Mena de beiconium
+tile.endiumBlock.bacon.name=Bloque de beiconium
+tile.endFlower.bacon.name=Beicon de la muerte
+tile.endermanHead.bacon.name=Cabeza de Beiconman
+tile.dungeonPuzzle.rock.name=Puzle de dungeon (Roca)
 tile.dungeonPuzzle.ceiling.name=Dungeon Puzzle (Ceiling)
 tile.dungeonPuzzle.disabled.name=Dungeon Puzzle (Disabled)
 tile.dungeonPuzzle.trigger.unlit.name=Dungeon Puzzle (Triggerable - Unlit)
@@ -213,27 +213,27 @@ tile.dungeonPuzzle.distr.spread.unlit.name=Dungeon Puzzle (Distributor - Spread 
 tile.dungeonPuzzle.distr.spread.lit.name=Dungeon Puzzle (Distributor - Spread - Lit)
 tile.dungeonPuzzle.distr.square.unlit.name=Dungeon Puzzle (Distributor - Square - Unlit)
 tile.dungeonPuzzle.distr.square.lit.name=Dungeon Puzzle (Distributor - Square - Lit)
-item.essence.dragon.bacon.name=Bacon Essence
-item.lorePage.bacon.name=Adventurer's Bacon
-item.altarNexus.bacon.name=Bacon Nexus
-item.endPowder.bacon.name=Bacon Powder
-item.endiumIngot.bacon.name=Baconium Ingot
-item.potionOfPurity.name=Potion of Purity
-item.potionOfPurity.splash.name=Splash Potion of Purity
-item.blankGem.name=Blank Gem
-item.templeCaller.bacon.name=Bacon Caller
-item.drySplinter.bacon.name=Dry Bacon
-item.ectoplasm.name=Ectoplasm
-item.spectralTear.name=Spectral Tear
-item.spectralTear.bacon.name=Spectral Bacon
-item.livingMatter.name=Living Matter
+item.essence.dragon.bacon.name=Escencia de beicon
+item.lorePage.bacon.name=Beicon del aventurero
+item.altarNexus.bacon.name=Beicon del nexo
+item.endPowder.bacon.name=Polvo de beicon
+item.endiumIngot.bacon.name=Lingote de beiconium
+item.potionOfPurity.name=Poción de la pureza
+item.potionOfPurity.splash.name=Poción de la pureza arrojadiza
+item.blankGem.name=Gema en blanco
+item.templeCaller.bacon.name=Portero de beicon
+item.drySplinter.bacon.name=Beicon seco
+item.ectoplasm.name=Ectoplasma
+item.spectralTear.name=Lagrima espectral
+item.spectralTear.bacon.name=Beicon espectral
+item.livingMatter.name=Mateia viva
 item.livingMatter.bacon.name=Living Bacon
 item.curseAmulet.name=Curse Amulet
-item.knowledgeNote.bacon.name=Bacon of Knowledge
+item.knowledgeNote.bacon.name=Beicon del conocimiento
 item.scorchingPickaxe.bacon.name=Scorching Bacon
 item.infernium.name=Infernium
 item.arcaneShard.name=Arcane Shard
-item.curse.eternal=Eternal
+item.curse.eternal=Eterno
 item.curse.teleportation.name=Curse of Teleportation
 item.curse.confusion.name=Curse of Confusion
 item.curse.tranquility.name=Curse of Tranquility
@@ -253,13 +253,13 @@ entity.babyEnderman.bacon.name=Baby Baconman
 entity.brainlessEnderman.bacon.name=Paralyzed Baconman
 entity.homelandEnderman.bacon.name=Homeland Baconman
 entity.enderGuardian.bacon.name=Bacon Guardian
-entity.vampireBat.bacon.name=Vampire Bacon
-entity.infestedBat.bacon.name=Infested Bacon
+entity.vampireBat.bacon.name=Beicon de vampiro
+entity.infestedBat.bacon.name=Beicon infectado
 entity.endermage.bacon.name=Baconmage
-container.experienceTable=Experience Table
-container.accumulationTable=Accumulation Table
-container.extractionTable=Extraction Table
-container.endPowderEnhancements.bacon=Bacon Powder Enhancements
+container.experienceTable=Mesa de experiencia
+container.accumulationTable=Mesa de acumulacióon
+container.extractionTable=Mesa de extracción
+container.endPowderEnhancements.bacon=Mejoras del polvo de beicon
 container.transportBeacon=Transport Beacon
 container.transportBeacon.bacon=Transport Bacon
 container.transportBeacon.error.dimension=Incorrect dimension
@@ -269,18 +269,18 @@ container.transportBeacon.error.noenergy=Out of Energy
 container.button.travel=Travel
 key.openCompendium.bacon=Bacon Compendium
 item.corporealMirageOrb.name=Corporeal Mirage Orb
-tile.soulCharm.name=Soul Charm
-tile.emptySoulCharm.name=Soul Charm Receptacle
-baconizer.bacon=bacon
+tile.soulCharm.name=Alma encantada
+tile.emptySoulCharm.name=Alma encantada receptáculo
+baconizer.bacon=beicon
 tile.crossedDecoration.flameweed.name=Flameweed
-tile.crossedDecoration.shadowOrchid.name=Shadow Orchid
-achievement.viewAchievements=View Achievements
-achievement.viewChallenges=View Challenges
+tile.crossedDecoration.shadowOrchid.name=Sombra Orquídea
+achievement.viewAchievements=Ver logros
+achievement.viewChallenges=Ver retos
 achievement.enderCompendium=The more you know
 achievement.enderCompendium.desc=Press '%1$s' to open Ender Compendium
 achievement.enderCompendium.desc.bacon=Press '%1$s' to open Bacon Compendium
 achievement.dragonEssence=Learning the powers
-achievement.dragonEssence.desc=Get Dragon Essence, use it on a Basic Essence Altar and convert it
+achievement.dragonEssence.desc=Consigue escencia del dragón, usando un altar de escencia basico y convertirlo
 achievement.enhancedBrewingStand=Enhanced Brewery
 achievement.enhancedBrewingStand.desc=Enhance a Brewing Stand
 achievement.templeCaller=Rebirth
@@ -312,15 +312,15 @@ achievement.curse.desc=Create your first Curse
 achievement.charmPouch=Enchant yourself!
 achievement.charmPouch.desc=Create a Charm Pouch
 achievement.biomeBurningMountains=The Burning Mountains
-achievement.biomeBurningMountains.desc=Visit one of the variations of Burning Mountains
+achievement.biomeBurningMountains.desc=Visita una de las variaciones de las montañas quemadas
 achievement.fieryEssence=Speeding up the heat
 achievement.fieryEssence.desc=Gather some Fiery Essence
 achievement.scorchingPickaxe=The ultimate block melter
 achievement.scorchingPickaxe.desc=Craft a Scorching Pickaxe using Infernium
-item.transferenceGem.info.linked=Linked
-item.templeCaller.info.disabled=The server has disabled Temple Caller.
-item.templeCaller.info.energy=The Temple Caller does not have enough energy.
-item.templeCaller.info.conditions=This is not the time to use that!
+item.transferenceGem.info.linked=vinculado
+item.templeCaller.info.disabled=El servidor ha desactivado el Templo de llamadas
+item.templeCaller.info.energy=El Templo de llamadas no tiene suficiente energía
+item.templeCaller.info.conditions=Este no es el momento de utilizar eso!
 item.energyWand.info.holding=Holding cluster with $ Energy
 item.charmPouch.info.active=Active
 item.charmPouch.info.inactive=Inactive
@@ -336,9 +336,9 @@ compendium.dataError=Error opening Ender Compendium, server did not provide requ
 compendium.smoothText.title=Smooth text rendering
 compendium.smoothText.line1=Enable if you experience bad
 compendium.smoothText.line2=text scaling (experimental)
-compendium.smoothText.mode=Mode
+compendium.smoothText.mode=Modo
 compendium.smoothText.disabled=Off
-tile.sacredStone.name=Sacred Stone
+tile.sacredStone.name=Piedra sagrada
 item.sacredWand.name=Sacred Wand
 item.sacredWand.type.basic=Basic Wand Core
 item.sacredWand.type.advanced=Advanced Wand Core
