--- a/src/main/resources/assets/hardcoreenderexpansion/lang/fr_FR.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/fr_FR.lang
@@ -338,17 +338,17 @@ compendium.smoothText.line1=Désativez-le si votre expérience est mauvaise
 compendium.smoothText.line2=Redimensionnement de texte (expérimental)
 compendium.smoothText.mode=Mode
 compendium.smoothText.disabled=Arrêt
-tile.sacredStone.name=Sacred Stone
-item.sacredWand.name=Sacred Wand
-item.sacredWand.type.basic=Basic Wand Core
-item.sacredWand.type.advanced=Advanced Wand Core
-item.sacredWand.type.epic=Epic Wand Core
-item.sacredWand.core.infestation=Infestation Wand Core
-item.sacredWand.core.blazing=Blazing Wand Core
-item.sacredWand.core.magic=Magic Wand Core
-item.sacredWand.core.dexterity=Dexterity Wand Core
-item.sacredWand.core.force=Force Wand Core
-item.sacredWand.core.repulsion=Repulsion Wand Core
+tile.sacredStone.name=Pierre sacrée
+item.sacredWand.name=Baguette sacrée
+item.sacredWand.type.basic=Cœur de baquette de base
+item.sacredWand.type.advanced=Cœur de baquette avancé
+item.sacredWand.type.epic=Cœur de baquette épique
+item.sacredWand.core.infestation=Cœur de baquette d'infestation
+item.sacredWand.core.blazing=Cœur de baquette flanbante
+item.sacredWand.core.magic=Cœur de baquette magique
+item.sacredWand.core.dexterity=Cœur de baquette de dextérité
+item.sacredWand.core.force=Cœur de baquette de force
+item.sacredWand.core.repulsion=Cœur de baquette de répultion
 item.charm.witcherydefense.tooltip=
 item.charm.voidrescue.tooltip=
-achievement.voidChest.notification=You have new items in your Void Chest
+achievement.voidChest.notification=Vous avez de nouveaux éléments dans votre coffre du vide
