--- a/src/main/resources/assets/hardcoreenderexpansion/lang/nl_NL.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/nl_NL.lang
@@ -84,7 +84,7 @@ tile.ravagedBrick.name=Geteisterde Blokstenen
 tile.energyCluster.name=Energiecluster
 container.enhancedBrewing=Verbeterde Brouwstandaard
 container.decompositionTable=Decompositietafel
-container.energyExtractionTable=Energieëxtractietafel
+container.energyExtractionTable=Energie Extractie Tafel
 tile.sphalerite.name=Sfaleriet
 tile.sphalerite.stardust.name=Sfaleriet met Sterrenstof
 item.spatialDashGem.name=Ruimtescheutjuweel
@@ -162,13 +162,13 @@ item.charm.seconddurability.tooltip=$0 kans om $1 levensduur te herstellen
 item.charm.slaughterimpact.tooltip=$0 schade doen in een radius van $1 wanneer je iets doodt
 item.charm.cannotstack=Dit amulet zal zijn effecten niet stapelen met andere amuletten van dit type!
 entity.hauntedMiner.name=Achtervolgde Mijnwerker
-tile.voidChest.name=Void Chest
-tile.endiumOre.name=Endium Ore
-tile.endiumBlock.name=Endium Block
+tile.voidChest.name=Kist der leegte
+tile.endiumOre.name=Endium erts
+tile.endiumBlock.name=Endium blok
 tile.persegrit.name=Persegrit
-tile.laboratoryGlass.name=Laboratory Glass
+tile.laboratoryGlass.name=Laboratorium glas
 item.endiumIngot.name=Endium Ingot
-item.knowledgeNote.name=Knowledge Note
+item.knowledgeNote.name=Kennis Notitie
 entity.homelandEnderman.name=Homeland Enderman
 energy.overlay.title=ENERGY CLUSTER
 energy.overlay.holding=HOLDING $ ENERGY
@@ -179,27 +179,27 @@ energy.status.tired=TIRED
 energy.status.unstable=UNSTABLE
 container.voidChest=Void Chest
 key.openCompendium=Ender Compendium
-tile.laboratoryObsidian.name=Laboratory Obsidian
-tile.laboratoryFloor.name=Laboratory Floor
-tile.laboratoryStairs.name=Laboratory Stairs
-item.ghostAmulet.impure.name=Ghost Amulet (Impure)
+tile.laboratoryObsidian.name=Laboratorium lavasteen
+tile.laboratoryFloor.name=Laboratorium vloer
+tile.laboratoryStairs.name=Laboratorium trappen
+item.ghostAmulet.impure.name=Spokenamulet (onzuiver)
 item.obsidianFragment.name=Obsidian Fragment
 item.obsidianRod.name=Obsidian Rod
-item.energyWandCore.name=Energy Wand Core
-item.energyWand.name=Energy Wand
+item.energyWandCore.name=Energie Staf Kern
+item.energyWand.name=Energie Staf
 item.auricion.name=Auricion
 item.rune.any.name=Rune (Any)
 entity.endermage.name=Endermage
 tile.baconStone.name=Bacon Stone
 tile.essenceAltar.dragon.bacon.name=Bacon Essence Altar
-tile.transportBeacon.name=Transport Beacon
-tile.transportBeacon.bacon.name=Transport Bacon
-tile.experienceTable.name=Experience Table
+tile.transportBeacon.name=Transportatie baken
+tile.transportBeacon.bacon.name=Transportatie spek
+tile.experienceTable.name=Ervarings tafel
 tile.accumulationTable.name=Accumulation Table
-tile.extractionTable.name=Extraction Table
-tile.endPowderOre.bacon.name=Bacon Powder Ore
-tile.endiumOre.bacon.name=Baconium Ore
-tile.endiumBlock.bacon.name=Baconium Block
+tile.extractionTable.name=Extractie tafel
+tile.endPowderOre.bacon.name=Spekpoeder erts
+tile.endiumOre.bacon.name=Spekium erts
+tile.endiumBlock.bacon.name=Spekonium blok
 tile.endFlower.bacon.name=Death Bacon
 tile.endermanHead.bacon.name=Baconman Head
 tile.dungeonPuzzle.rock.name=Dungeon Puzzle (Rock)
@@ -218,17 +218,17 @@ item.lorePage.bacon.name=Adventurer's Bacon
 item.altarNexus.bacon.name=Bacon Nexus
 item.endPowder.bacon.name=Bacon Powder
 item.endiumIngot.bacon.name=Baconium Ingot
-item.potionOfPurity.name=Potion of Purity
-item.potionOfPurity.splash.name=Splash Potion of Purity
+item.potionOfPurity.name=Toverdrank der Puurheid
+item.potionOfPurity.splash.name=Spattende Toverdrank der Puurheid
 item.blankGem.name=Blank Gem
 item.templeCaller.bacon.name=Bacon Caller
 item.drySplinter.bacon.name=Dry Bacon
-item.ectoplasm.name=Ectoplasm
+item.ectoplasm.name=Ecto plasma
 item.spectralTear.name=Spectral Tear
 item.spectralTear.bacon.name=Spectral Bacon
-item.livingMatter.name=Living Matter
-item.livingMatter.bacon.name=Living Bacon
-item.curseAmulet.name=Curse Amulet
+item.livingMatter.name=Levende materie
+item.livingMatter.bacon.name=Levende spek
+item.curseAmulet.name=Vervloek amulet
 item.knowledgeNote.bacon.name=Bacon of Knowledge
 item.scorchingPickaxe.bacon.name=Scorching Bacon
 item.infernium.name=Infernium
@@ -317,10 +317,10 @@ achievement.fieryEssence=Speeding up the heat
 achievement.fieryEssence.desc=Gather some Fiery Essence
 achievement.scorchingPickaxe=The ultimate block melter
 achievement.scorchingPickaxe.desc=Craft a Scorching Pickaxe using Infernium
-item.transferenceGem.info.linked=Linked
-item.templeCaller.info.disabled=The server has disabled Temple Caller.
-item.templeCaller.info.energy=The Temple Caller does not have enough energy.
-item.templeCaller.info.conditions=This is not the time to use that!
+item.transferenceGem.info.linked=verbonden
+item.templeCaller.info.disabled=De server heeft de Tempeloproeper uitgeschakeld.
+item.templeCaller.info.energy=De Tempeloproeper heeft niet genoeg energie.
+item.templeCaller.info.conditions=Dit is niet de juiste tijd om dit te gebruiken!
 item.energyWand.info.holding=Holding cluster with $ Energy
 item.charmPouch.info.active=Active
 item.charmPouch.info.inactive=Inactive
@@ -338,7 +338,7 @@ compendium.smoothText.line1=Enable if you experience bad
 compendium.smoothText.line2=text scaling (experimental)
 compendium.smoothText.mode=Mode
 compendium.smoothText.disabled=Off
-tile.sacredStone.name=Sacred Stone
+tile.sacredStone.name=Heilig steen
 item.sacredWand.name=Sacred Wand
 item.sacredWand.type.basic=Basic Wand Core
 item.sacredWand.type.advanced=Advanced Wand Core
