--- a/src/main/resources/assets/hardcoreenderexpansion/lang/ru_RU.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/ru_RU.lang
@@ -163,7 +163,7 @@ item.charm.slaughterimpact.tooltip=$0 нанесётся в радиусе $1 о
 item.charm.cannotstack=Эффект от этого амулета не складывается с амулетами такого же типа
 entity.hauntedMiner.name=Призрачный шахтёр
 tile.voidChest.name=Пустотный сундук
-tile.endiumOre.name=Эндиумная руда
+tile.endiumOre.name=Руда эндиума
 tile.endiumBlock.name=Блок эндиума
 tile.persegrit.name=Фиолетовый гравий
 tile.laboratoryGlass.name=Лабораторное стекло
@@ -270,7 +270,7 @@ container.button.travel=Отправиться
 key.openCompendium.bacon=Компендиум Бекона
 item.corporealMirageOrb.name=Шар материального миража
 tile.soulCharm.name=Амулет души
-tile.emptySoulCharm.name=Сосуд из-под амулета души
+tile.emptySoulCharm.name=Пустой Амулет Души
 baconizer.bacon=бекон
 tile.crossedDecoration.flameweed.name=Пламенный сорняк
 tile.crossedDecoration.shadowOrchid.name=Теневая орхидея
@@ -338,17 +338,17 @@ compendium.smoothText.line1=Включите, если Вы испытывает
 compendium.smoothText.line2=плохое масштабирование текста (экспериментально)
 compendium.smoothText.mode=Режим
 compendium.smoothText.disabled=Выкл.
-tile.sacredStone.name=Sacred Stone
-item.sacredWand.name=Sacred Wand
-item.sacredWand.type.basic=Basic Wand Core
-item.sacredWand.type.advanced=Advanced Wand Core
-item.sacredWand.type.epic=Epic Wand Core
-item.sacredWand.core.infestation=Infestation Wand Core
-item.sacredWand.core.blazing=Blazing Wand Core
-item.sacredWand.core.magic=Magic Wand Core
-item.sacredWand.core.dexterity=Dexterity Wand Core
-item.sacredWand.core.force=Force Wand Core
-item.sacredWand.core.repulsion=Repulsion Wand Core
+tile.sacredStone.name=Священный камень
+item.sacredWand.name=Священный жезл
+item.sacredWand.type.basic=Основной стержень
+item.sacredWand.type.advanced=Продвинутый стержень
+item.sacredWand.type.epic=Эпический стержень
+item.sacredWand.core.infestation=Стержень заражения
+item.sacredWand.core.blazing=Пылающий стержень
+item.sacredWand.core.magic=Магический стержень
+item.sacredWand.core.dexterity=Стержень ловкости
+item.sacredWand.core.force=Силовой стержень
+item.sacredWand.core.repulsion=Стержень отталкивания
 item.charm.witcherydefense.tooltip=
 item.charm.voidrescue.tooltip=
-achievement.voidChest.notification=You have new items in your Void Chest
+achievement.voidChest.notification=У Вас есть новые предметы в Вашем пустотном сундуке
