--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -1,5 +1,6 @@
 # DO NOT MODIFY THIS FILE!
 tile.baconStone.name=Bacon Stone
+tile.stoneBrickWall.name=Stone Brick Wall
 tile.obsidianEnd.name=Falling Obsidian
 tile.obsidianStairs.name=Obsidian Stairs
 tile.obsidianSpecial.smooth.name=Smooth Obsidian
