Add Gloomrock stairs and slabs

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -17,6 +17,10 @@ tile.gloomrock.color.9.name=Pink Gloomrock
 tile.gloomrock.color.10.name=White Gloomrock
 tile.gloomrock.color.11.name=Gray Gloomrock
 tile.gloomrock.color.12.name=Black Gloomrock
+tile.gloomrockSmoothSlab.name=Smooth Gloomrock Slab
+tile.gloomrockSmoothStairs.name=Smooth Gloomrock Stairs
+tile.gloomrockBrickSlab.name=Gloomrock Brick Slab
+tile.gloomrockBrickStairs.name=Gloomrock Brick Stairs
 tile.obsidianEnd.name=Falling Obsidian
 tile.obsidianStairs.name=Obsidian Stairs
 tile.obsidianSpecial.smooth.name=Smooth Obsidian
