--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -100,6 +100,7 @@ tile.laboratoryGlass.name=Laboratory Glass
 tile.sacredStone.name=Sacred Stone
 
 item.ethereum.name=Ethereum
+item.ancientDust.name=Ancient Dust
 item.essence.dragon.name=Dragon Essence
 item.essence.dragon.bacon.name=Bacon Essence
 item.essence.fiery.name=Fiery Essence
