--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -52,6 +52,7 @@ tile.endiumBlock.bacon.name=Baconium Block
 tile.endStoneTerrain.infested.name=Infested End Stone
 tile.endStoneTerrain.burned.name=Burned End Stone
 tile.endStoneTerrain.enchanted.name=Enchanted End Stone
+tile.dryVine.name=Dry Vines
 tile.spookyLog.name=Spooky Log
 tile.spookyLeaves.name=Spooky Leaves
 tile.endFlower.name=Death Flower
