--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -298,6 +298,8 @@ compendium.smoothText.disabled=Off
 compendium.crafting.changed=Recipe was modified by another mod
 compendium.crafting.removed=Recipe was removed by another mod
 
+gui.openHeeTracker=Visit Issue Tracker
+
 key.openCompendium=Ender Compendium
 key.openCompendium.bacon=Bacon Compendium
 key.openCompendium.conflict=Ender Compendium key conflicts with $, please fix the issue in Controls menu.
