Work on Energy (health, handling, data generator)

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -264,6 +264,7 @@ energy.overlay.regen=REGENERATING UP TO $
 energy.status.healthy=HEALTHY
 energy.status.weakened=WEAKENED
 energy.status.tired=TIRED
+energy.status.damaged=DAMAGED
 energy.status.unstable=UNSTABLE
 
 namegenerator.middle=, the 
